# lank

./: .gitignore  README.md  lank.cmd  pyproject.toml  requirements.txt  todo.md
lank/: __init__.py  __main__.py  ai_client.py  cli.py  config.py  memory.py  model_config.py  tui.py  utils.py
lank/tools/: __init__.py  cmd_exec.py  file_ops.py  system.py  todo_tools.py
