[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lank"
version = "0.1.0"
description = "轻量级 TUI 聊天工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["rich>=12.0", "prompt_toolkit>=3.0"]

[project.scripts]
lank = "lank.__main__:cli"
